<resources>
    <string name="app_name">Untitled_Project_2</string>
    <string name="menu_open">Open</string>
    <string name="menu_close">Close</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_vaccines">activity_vaccines</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="zaktualizuj_dane">Zaktualizuj Dane</string>
    <string name="account">Profil</string>
    <string name="subscriptions">Subskrypcje</string>
    <string name="home">Strona główna</string>
    <string name="myvaccines">Moje Sczepienia</string>
    <string name="functions">Konto</string>
    <string name="kontynuuj_bez_logowania">Kontynuuj Bez Logowania</string>
    <string name="register">Rejestracja</string>
    <string name="login">Zaloguj</string>
    <string name="password">Hasło</string>
    <string name="email">Email</string>
    <string name="loginLogo">Login</string>
    <string name="zaloguj_si">Zaloguj się</string>
    <string name="zarejestruj_si">Zarejestruj się</string>
</resources>